force-app/main/default/objects/ContractHistory__c/ContractHistory__c.object-meta.xml
<CustomObject>
    <label>契約履歴</label>
    <pluralLabel>契約履歴</pluralLabel>
    <nameField>
        <label>契約履歴名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>