force-app/main/default/objects/ContractHistory__c/fields/CurrentTermEndDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentTermEndDate__c</fullName>
    <label>現期間終了日</label>
    <type>Date</type>
</CustomField>