force-app/main/default/objects/ContractHistory__c/fields/CurrentTermStartDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentTermStartDate__c</fullName>
    <label>現期間開始日</label>
    <type>Date</type>
</CustomField>