force-app/main/default/objects/ContractHistory__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>有効日</label>
    <type>Date</type>
</CustomField>