force-app/main/default/objects/ContractHistory__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>見積備考</label>
    <type>TextArea</type>
</CustomField>