force-app/main/default/objects/ContractHistory__c/fields/PreviousHistory__c.field-meta.xml
<CustomField>
    <fullName>PreviousHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>前回契約履歴</label>
    <referenceTo>ContractHistory__c</referenceTo>
    <relationshipLabel>契約履歴</relationshipLabel>
    <relationshipName>PreviousHistoryHistories</relationshipName>
    <type>Lookup</type>
</CustomField>